--- a/MobileApp/MobileApp/MobileApp/Views/OrderDetailsPage.xaml
+++ b/MobileApp/MobileApp/MobileApp/Views/OrderDetailsPage.xaml
@@ -4,16 +4,17 @@
              x:Class="MobileApp.Views.OrderDetailsPage">
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="Order Details" FontSize="30" Padding="10,5,0,0"/>
-            <Label Text="{Binding orderDate}" FontSize="24" Padding="10,0"/>
+            <Label Text="Order Details" FontSize="30" Padding="10,5,0,0" TextColor="Black"/>
+            <Label Text="{Binding orderDate, StringFormat='Ordered: {0:dd/MM/yy}'}" FontSize="24" Padding="10,0"/>
             <CollectionView Margin="0"
                             BackgroundColor="#f7f7f7"
                             ItemsLayout="VerticalList"
                             ItemsSource="{Binding OrdersInGroup}"
-                            ItemTemplate="{StaticResource ProductTemplate}"
-                            SelectionMode="Single">
-                <!--SelectionChanged="OnCollectionViewSelectionChanged"-->
-
+                            ItemTemplate="{StaticResource OrderDetailsTemplate}"
+                            SelectionMode="Single"
+                            x:Name="collection1"
+                SelectionChanged="CollectionView_SelectionChanged"
+                SelectedItem="{Binding SelectItem, Mode=TwoWay}">
             </CollectionView>
 
         </StackLayout>
