--- a/MobileApp/MobileApp/MobileApp/Views/CheckoutPage.xaml
+++ b/MobileApp/MobileApp/MobileApp/Views/CheckoutPage.xaml
@@ -16,35 +16,32 @@
                     HorizontalOptions="Start" 
                     FontSize="Title" FontAttributes="Bold" TextColor="Black" />
 
-            <!-- flex box to display number of items label next to value binding -->
-            <FlexLayout>
-                <Label Text="Number of items in basket: " TextColor="Gray" FontSize="Medium"/>
-                <Label Text="{Binding NumItems}" FontSize="Medium"
-                    Style="{DynamicResource BodyStyle}" TextColor="Gray"/>
-            </FlexLayout>
+            <Label Text="{Binding NumItems, StringFormat='Number of items in Basket: {0}'}"
+                   TextColor="Gray"
+                   FontSize="Medium"
+                   Style="{DynamicResource BodyStyle}"/>
 
             <!-- collection view of all products in basket -->
             <RefreshView IsRefreshing="{Binding IsRefreshing}"
-                                Command="{Binding RefreshCommand}">
+                         Command="{Binding RefreshCommand}">
                 <CollectionView
-                Margin="0,10,0,0"
+                Margin="0,0,0,0"
                 ItemsLayout="VerticalList"
                 VerticalOptions="Start"
                 ItemsSource="{Binding basket}"
                 ItemTemplate="{StaticResource BasketTemplate}"
                 SelectionMode="Single"
+                SelectionChanged="OnCollectionViewSelectionChanged"
+                SelectedItem="{Binding SelectItem, Mode=TwoWay}"
                 />
             </RefreshView>
-            <!--ItemsSource="{x:Static data:Basket.Products}"-->
             <!-- separator line -->
             <BoxView Style="{StaticResource SeparatorLineStyle}"/>
 
-            <!-- flex box to display total price label next to value binding -->
-            <FlexLayout>
-                <Label Text="Total Price: £" TextColor="Black" FontSize="Large"/>
-                <Label Text="{Binding TotalPrice}" FontSize="Large"
-                    Style="{DynamicResource BodyStyle}" TextColor="Black"/>
-            </FlexLayout>
+            <Label Text="{Binding TotalPrice, StringFormat='Total Price £{0:0.00}'}"
+                   TextColor="Black"
+                   FontSize="Large"
+                   Style="{DynamicResource BodyStyle}"/>
 
             <!-- pay button -->
             <Button Margin="0,14,0,0" Text="Pay" Command="{Binding ClickedPayBtnCmd}"/>
