--- a/MobileApp/MobileApp/MobileApp/Views/ProductPage.xaml
+++ b/MobileApp/MobileApp/MobileApp/Views/ProductPage.xaml
@@ -78,59 +78,17 @@
                 <Label Text="Recommended" TextColor="Black" FontSize="30"/>
                 <!--Carousel -> itemSource is list of all products change to recomeneded product list-->
                 <CarouselView ItemsSource="{x:Static data:RecommendedProducts.RecProducts}"
-                        Margin="0,5,0,0"
-                        PeekAreaInsets="100"
-                        IndicatorView="indicatorview"
-                        HeightRequest="250"
-                        >
-
-                    <CarouselView.ItemTemplate>
-                        <DataTemplate>
-                            <StackLayout>
-                                <Frame HasShadow="True"
-                                BorderColor="LightGray" CornerRadius="5"
-                                Margin="4,2" Padding="0,10"
-                                HeightRequest="220" WidthRequest="250">
-                                    <StackLayout Margin="0" Padding="0">
-                                        <StackLayout.GestureRecognizers>
-                                                <!--<TapGestureRecognizer Command="{Binding selectCarouselItem}" CommandParameter="{Binding Id}" />-->
-                                                <TapGestureRecognizer Tapped="CarouselItem_Tapped" />
-                                        </StackLayout.GestureRecognizers>
-                                        <Label Text="{Binding Id}" IsVisible="false" x:Name="ProductID"/>
-                                        <Image Source="{Binding ImageUrl}" 
-                                        Aspect="AspectFit"
-                                        HeightRequest="125"
-                                        VerticalOptions="Start"
-                                        HorizontalOptions="Center" />
-                                        <BoxView Style="{StaticResource SeparatorLineStyle}" Margin="0,0,0,0"/>
-                                        <Label Text="{Binding Name}" 
-                                        FontAttributes="Bold"
-                                        FontSize="28"
-                                        HorizontalOptions="Center"
-                                        VerticalOptions="Center" TextColor="Black"/>
-
-                                        <FlexLayout HorizontalOptions="Center" JustifyContent="Center">
-                                            <Label Text="Price: £"
-                                            FontSize="24"
-                                            TextColor="Black"/>
-                                            <Label Text="{Binding Price}"
-                                            MaxLines="5"
-                                            LineBreakMode="TailTruncation"
-                                            FontSize="24"
-                                            TextColor="Black"/>
-                                        </FlexLayout>
-                                    </StackLayout>
-                                </Frame>
-                            </StackLayout>
-                        </DataTemplate>
-                    </CarouselView.ItemTemplate>
+                                Margin="0,5,0,0"
+                                PeekAreaInsets="100"
+                                IndicatorView="indicatorview"
+                                HeightRequest="250"
+                                ItemTemplate="{StaticResource CarouselTemplate}">
                 </CarouselView>
-                <IndicatorView
-                x:Name="indicatorview"
-                Margin="0,10,0,0"
-                IndicatorColor="LightGray"
-                IndicatorSize="10"
-                SelectedIndicatorColor="Black" />
+                <IndicatorView x:Name="indicatorview"
+                                Margin="0,10,0,0"
+                                IndicatorColor="LightGray"
+                                IndicatorSize="10"
+                                SelectedIndicatorColor="Black" />
 
                     <!-- separator line -->
                 <BoxView Style="{StaticResource SeparatorLineStyle}"/>
@@ -142,8 +100,7 @@
                                 ItemsSource="{Binding Reviews}"
                                 ItemTemplate="{StaticResource ReviewTemplate}"
                                 SelectionMode="Single"
-                                HeightRequest="500"
-                                >
+                                HeightRequest="500">
                     <CollectionView.EmptyView>
                         <Label HorizontalOptions="Center" HorizontalTextAlignment="Center" Text="Be the first to review this product" FontSize="28" TextColor="Black"/>
                     </CollectionView.EmptyView>
