--- a/MobileApp/MobileApp/MobileApp/Views/ProductPage.xaml
+++ b/MobileApp/MobileApp/MobileApp/Views/ProductPage.xaml
@@ -37,77 +37,79 @@
     <ContentPage.Content>
         <Grid>
             <ScrollView>
-            <StackLayout Margin="10">
+                <StackLayout Margin="10">
 
-                <Frame BorderColor="#D8DAE0" CornerRadius="20" HasShadow="True">
-                    <Image Source="{Binding ImageUrl}"
-                       Margin="0,5,0,10"
-                   HeightRequest="200" 
-                   WidthRequest="500" 
-                   HorizontalOptions="CenterAndExpand"/>
-                </Frame>
-                
-                <Label Text="{Binding Name}"
-                       HorizontalOptions="Center" 
-                       FontSize="40" FontAttributes="Bold" TextColor="Black" />
-                <FlexLayout>
-                    <Label Text="{StaticResource IconStar}" FontFamily="FA-S" FontSize="20" TextColor="{Binding StarColor1}"/>
-                    <Label Text="{StaticResource IconStar}" FontFamily="FA-S" FontSize="20" TextColor="{Binding StarColor2}"/>
-                    <Label Text="{StaticResource IconStar}" FontFamily="FA-S" FontSize="20" TextColor="{Binding StarColor3}"/>
-                    <Label Text="{StaticResource IconStar}" FontFamily="FA-S" FontSize="20" TextColor="{Binding StarColor4}"/>
-                    <Label Text="{StaticResource IconStar}" FontFamily="FA-S" FontSize="20" TextColor="{Binding StarColor5}"/>
-                </FlexLayout>
+                    <Frame BorderColor="#D8DAE0" CornerRadius="20" HasShadow="True">
+                        <Image Source="{Binding ImageUrl}"
+                           Margin="0,5,0,10"
+                       HeightRequest="200" 
+                       WidthRequest="500" 
+                       HorizontalOptions="CenterAndExpand"/>
+                    </Frame>
 
-                <!--flex box to display word price next to price binding-->
-                <FlexLayout>
-                    <Label Text="Price: £" TextColor="Black" FontSize="30"/>
-                    <Label Text="{Binding Price}"
-                       Style="{DynamicResource BodyStyle}" FontSize="30" TextColor="Black"/>
-                </FlexLayout>
-                <Grid RowDefinitions="50" ColumnDefinitions="*, *" Margin="0,10,0,10">
-                    <Button Text="Buy Now!" Grid.Column="0" Grid.Row="0" Command="{Binding BuyNowCmd}"/>
-                    <Button Text="Add To Basket" Grid.Column="1" Grid.Row="0" Command="{Binding AddToBasketCmd}"/>
-                </Grid>
-                <BoxView Style="{StaticResource SeparatorLineStyle}"/>
-                <Label Text="Description" TextColor="Black" FontSize="30"/>
-                <Label Text= "{Binding Description}"
-                       Style="{DynamicResource BodyStyle}" TextColor="Black" FontSize="24"/>
+                    <Label Text="{Binding Name}"
+                           HorizontalOptions="Center" 
+                           FontSize="40" FontAttributes="Bold" TextColor="Black" />
+                    <FlexLayout>
+                        <Label Text="{StaticResource IconStar}" FontFamily="FA-S" FontSize="20" TextColor="{Binding StarColor1}"/>
+                        <Label Text="{StaticResource IconStar}" FontFamily="FA-S" FontSize="20" TextColor="{Binding StarColor2}"/>
+                        <Label Text="{StaticResource IconStar}" FontFamily="FA-S" FontSize="20" TextColor="{Binding StarColor3}"/>
+                        <Label Text="{StaticResource IconStar}" FontFamily="FA-S" FontSize="20" TextColor="{Binding StarColor4}"/>
+                        <Label Text="{StaticResource IconStar}" FontFamily="FA-S" FontSize="20" TextColor="{Binding StarColor5}"/>
+                    </FlexLayout>
 
-                <BoxView Style="{StaticResource SeparatorLineStyle}"/>
+                    <!--flex box to display word price next to price binding-->
+                    <FlexLayout>
+                        <Label Text="Price: £" TextColor="Black" FontSize="30"/>
+                        <Label Text="{Binding Price}"
+                           Style="{DynamicResource BodyStyle}" FontSize="30" TextColor="Black"/>
+                    </FlexLayout>
+                    <Grid RowDefinitions="50" ColumnDefinitions="*, *" Margin="0,10,0,10">
+                        <Button Text="Buy Now!" Grid.Column="0" Grid.Row="0" Command="{Binding BuyNowCmd}"/>
+                        <Button Text="Add To Basket" Grid.Column="1" Grid.Row="0" Command="{Binding AddToBasketCmd}"/>
+                    </Grid>
+                    <BoxView Style="{StaticResource SeparatorLineStyle}"/>
+                    <Label Text="Description" TextColor="Black" FontSize="30"/>
+                    <Label Text= "{Binding Description}"
+                           Style="{DynamicResource BodyStyle}" TextColor="Black" FontSize="24"/>
 
-                <Label Text="Recommended" TextColor="Black" FontSize="30"/>
-                <!--Carousel -> itemSource is list of all products change to recomeneded product list-->
-                <CarouselView ItemsSource="{x:Static data:RecommendedProducts.RecProducts}"
-                                Margin="0,5,0,0"
-                                PeekAreaInsets="100"
-                                IndicatorView="indicatorview"
-                                HeightRequest="250"
-                                ItemTemplate="{StaticResource CarouselTemplate}">
-                </CarouselView>
-                <IndicatorView x:Name="indicatorview"
-                                Margin="0,10,0,0"
-                                IndicatorColor="LightGray"
-                                IndicatorSize="10"
-                                SelectedIndicatorColor="Black" />
+                    <BoxView Style="{StaticResource SeparatorLineStyle}"/>
+
+                    <Label Text="Recommended" TextColor="Black" FontSize="30"/>
+                    <!--Carousel -> itemSource is list of all products change to recomeneded product list-->
+                    <CarouselView ItemsSource="{x:Static data:RecommendedProducts.RecProducts}"
+                                    Margin="0,5,0,0"
+                                    PeekAreaInsets="100"
+                                    IndicatorView="indicatorview"
+                                    HeightRequest="250"
+                                    ItemTemplate="{StaticResource CarouselTemplate}">
+                    </CarouselView>
+                    <IndicatorView x:Name="indicatorview"
+                                    Margin="0,10,0,0"
+                                    IndicatorColor="LightGray"
+                                    IndicatorSize="10"
+                                    SelectedIndicatorColor="Black" />
 
                     <!-- separator line -->
-                <BoxView Style="{StaticResource SeparatorLineStyle}"/>
+                    <BoxView Style="{StaticResource SeparatorLineStyle}"/>
 
-                <Label Text="Reviews" TextColor="Black" FontSize="30"/>
+                    <Label Text="Reviews" TextColor="Black" FontSize="30"/>
                     <Button Text="Write Review" Clicked="WriteReview_Clicked" Command="{Binding ResetWriteCommand}"/>
-                <CollectionView BackgroundColor="White"
-                                ItemsLayout="VerticalList"
-                                ItemsSource="{Binding Reviews}"
-                                ItemTemplate="{StaticResource ReviewTemplate}"
-                                SelectionMode="Single"
-                                HeightRequest="500">
-                    <CollectionView.EmptyView>
-                        <Label HorizontalOptions="Center" HorizontalTextAlignment="Center" Text="Be the first to review this product" FontSize="28" TextColor="Black"/>
-                    </CollectionView.EmptyView>
-                </CollectionView>
-                
-            </StackLayout>
-        </ScrollView>
+                    <CollectionView BackgroundColor="White"
+                                    ItemsLayout="VerticalList"
+                                    ItemsSource="{Binding Reviews}"
+                                    ItemTemplate="{StaticResource ReviewTemplate}"
+                                    SelectionMode="Single"
+                                    HeightRequest="500"
+                                    SelectedItem="{Binding SelectReview, Mode=TwoWay}"
+                                    SelectionChanged="ReviewClicked">
+                        <CollectionView.EmptyView>
+                            <Label HorizontalOptions="Center" HorizontalTextAlignment="Center" Text="Be the first to review this product" FontSize="24" TextColor="Black"/>
+                        </CollectionView.EmptyView>
+                    </CollectionView>
+
+                </StackLayout>
+            </ScrollView>
             
             <!-- Backdrop -->
             <BoxView Color="#4B000000"
@@ -122,11 +124,11 @@
             <!-- Bottom Drawer -->
 
             <Frame  x:Name="BottomToolbar"
-                    HeightRequest="495"
+                    HeightRequest="550"
                     VerticalOptions="End"
                     BackgroundColor="White"
                     CornerRadius="20"
-                    TranslationY="540"
+                    TranslationY="550"
                     Padding="15,6"
                     HasShadow="True">
                 <Frame.GestureRecognizers>
@@ -154,9 +156,43 @@
                     </Frame>
                     
                     <Frame BorderColor="LightGray" CornerRadius="20" Padding="10,0" HasShadow="True">
-                        <Editor Text="{Binding RDescription}" Placeholder="Description" PlaceholderColor="DarkGray" FontSize="28" TextColor="Black" HeightRequest="250" BackgroundColor="White"/>
+                        <Editor Text="{Binding RDescription}" Placeholder="Description" PlaceholderColor="DarkGray" FontSize="28" TextColor="Black" HeightRequest="200" BackgroundColor="White"/>
                     </Frame>
                     <Button Text="Done" Command="{Binding WriteReview}" Clicked="DoneReview_Clicked"/>
+                </StackLayout>
+            </Frame>
+
+            <Frame  x:Name="BottomReviewDetails"
+                    HeightRequest="550"
+                    VerticalOptions="End"
+                    BackgroundColor="White"
+                    CornerRadius="20"
+                    TranslationY="550"
+                    Padding="15,6"
+                    HasShadow="True">
+                <Frame.GestureRecognizers>
+                    <PanGestureRecognizer
+                        PanUpdated="PanGestureRecognizer_PanUpdated"/>
+                </Frame.GestureRecognizers>
+                <StackLayout Orientation="Vertical" Padding="0,4">
+                    <BoxView CornerRadius="2" HeightRequest="2"
+                             BackgroundColor="LightGray"
+                             HorizontalOptions="Center"/>
+                    <Label Text="Review"
+                           TextColor="Black"
+                           HorizontalOptions="Center"
+                           FontSize="30"
+                           FontAttributes="Bold"/>
+                    <FlexLayout JustifyContent="Center">
+                        <Button Text="{StaticResource IconStar}" FontFamily="FA-S" FontSize="20" TextColor="{Binding selectReview.StarColor1}" WidthRequest="30" HeightRequest="30" Padding="0" BackgroundColor="Transparent" BorderColor="Transparent"/>
+                        <Button Text="{StaticResource IconStar}" FontFamily="FA-S" FontSize="20" TextColor="{Binding selectReview.StarColor2}" WidthRequest="30" HeightRequest="30" Padding="0" BackgroundColor="Transparent" BorderColor="Transparent"/>
+                        <Button Text="{StaticResource IconStar}" FontFamily="FA-S" FontSize="20" TextColor="{Binding selectReview.StarColor3}" WidthRequest="30" HeightRequest="30" Padding="0" BackgroundColor="Transparent" BorderColor="Transparent"/>
+                        <Button Text="{StaticResource IconStar}" FontFamily="FA-S" FontSize="20" TextColor="{Binding selectReview.StarColor4}" WidthRequest="30" HeightRequest="30" Padding="0" BackgroundColor="Transparent" BorderColor="Transparent"/>
+                        <Button Text="{StaticResource IconStar}" FontFamily="FA-S" FontSize="20" TextColor="{Binding selectReview.StarColor5}" WidthRequest="30" HeightRequest="30" Padding="0" BackgroundColor="Transparent" BorderColor="Transparent"/>
+                    </FlexLayout>
+                    <Label Text="{Binding selectReview.Title}" FontSize="26" TextColor="Black" FontAttributes="Bold" HorizontalTextAlignment="Center"/>
+                    <Label Text="{Binding selectReview.Desciption}" FontSize="24" TextColor="Black"/>
+
                 </StackLayout>
             </Frame>
 
