--- a/MobileApp/MobileApp/MobileApp/Views/LoginPage.xaml
+++ b/MobileApp/MobileApp/MobileApp/Views/LoginPage.xaml
@@ -3,6 +3,11 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:vm="clr-namespace:MobileApp.ViewModels"
              x:Class="MobileApp.Views.LoginPage">
+
+    <Shell.TitleView>
+        <Label Text="eBAZON" FontSize="Title" FontAttributes="Bold" VerticalTextAlignment="Center" Padding="0" Margin="0" TextColor="White"/>
+    </Shell.TitleView>
+
     <ContentPage.Content>
         <StackLayout Padding="10">
             <!--Padding="0 0 20 0"-->
