--- a/MobileApp/MobileApp/MobileApp/Views/OrdersPage.xaml
+++ b/MobileApp/MobileApp/MobileApp/Views/OrdersPage.xaml
@@ -3,6 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MobileApp.Views.OrdersPage"
              xmlns:data="clr-namespace:MobileApp.Data" >
+    <Shell.TitleView>
+        <Label Text="eBAZON" FontSize="Title" FontAttributes="Bold" VerticalTextAlignment="Center" Padding="0" Margin="0" TextColor="White"/>
+    </Shell.TitleView>
     <ContentPage.Content>
         <StackLayout Margin="10">
             <!-- page title -->
