--- a/MobileApp/MobileApp/MobileApp/Views/SignUpPage.xaml
+++ b/MobileApp/MobileApp/MobileApp/Views/SignUpPage.xaml
@@ -2,43 +2,48 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MobileApp.Views.SignUpPage">
+
+    <Shell.TitleView>
+        <Label Text="eBAZON" FontSize="Title" FontAttributes="Bold" VerticalTextAlignment="Center" Padding="0" Margin="0" TextColor="White"/>
+    </Shell.TitleView>
+
     <ContentPage.Content>
         <ScrollView>
             <StackLayout Padding="10">
                 <!--Padding="0 0 20 0"-->
-                <Label FontSize="40" HorizontalOptions="Center" Text="SignUp"/>
+                <Label FontSize="40" HorizontalOptions="Center" Text="SignUp" TextColor="Black"/>
 
-                <Label Text="Email" FontSize="Large"/>
+                <Label Text="Email" FontSize="Large" TextColor="Black"/>
                 <Frame CornerRadius="20" BorderColor="LightGray" HasShadow="True" Padding="10,0"  Margin="0,10">
                     <Entry x:Name="usernameEntry" Text="{Binding Email}" Placeholder="Email" FontSize="Large"/>
                 </Frame>
-                
-                <Label Text="Password" FontSize="Large"/>
+
+                <Label Text="Password" FontSize="Large" TextColor="Black"/>
                 <Frame CornerRadius="20" BorderColor="LightGray" HasShadow="True" Padding="10,0"  Margin="0,10">
                     <Entry x:Name="passwordEntry" Text="{Binding Password}" Placeholder="Password" FontSize="Large" IsPassword="True"/>
                 </Frame>
-                
-                <Label Text="Confirm Password" FontSize="Large"/>
+
+                <Label Text="Confirm Password" FontSize="Large" TextColor="Black"/>
                 <Frame CornerRadius="20" BorderColor="LightGray" HasShadow="True" Padding="10,0"  Margin="0,10">
                     <Entry x:Name="passwordConfirmEntry" Text="{Binding Password}" Placeholder="Confirm password" FontSize="Large" IsPassword="True"/>
                 </Frame>
-                
-                <Label Text="First Name" FontSize="Large"/>
+
+                <Label Text="First Name" FontSize="Large" TextColor="Black"/>
                 <Frame CornerRadius="20" BorderColor="LightGray" HasShadow="True" Padding="10,0"  Margin="0,10">
                     <Entry x:Name="firstNameEntry" Text="{Binding FirstName}" Placeholder="First name" FontSize="Large"/>
                 </Frame>
-                
-                <Label Text="Last Name" FontSize="Large"/>
+
+                <Label Text="Last Name" FontSize="Large" TextColor="Black"/>
                 <Frame CornerRadius="20" BorderColor="LightGray" HasShadow="True" Padding="10,0"  Margin="0,10">
                     <Entry x:Name="lastNameEntry" Text="{Binding LastName}" Placeholder="Last Name" FontSize="Large"/>
                 </Frame>
-                
-                <Label Text="Age" FontSize="Large"/>
+
+                <Label Text="Age" FontSize="Large" TextColor="Black"/>
                 <Frame CornerRadius="20" BorderColor="LightGray" HasShadow="True" Padding="10,0"  Margin="0,10">
                     <Entry x:Name="ageEntry" Text="{Binding Age}" Placeholder="Age" FontSize="Large"/>
                 </Frame>
-                
-                <Label Text="Gender" FontSize="Large"/>
+
+                <Label Text="Gender" FontSize="Large" TextColor="Black"/>
                 <Frame CornerRadius="20" BorderColor="LightGray" HasShadow="True" Padding="10,0"  Margin="0,10">
                     <Picker x:Name="gender" HorizontalOptions="FillAndExpand" SelectedItem="{Binding Gender}">
                         <Picker.Items>
@@ -47,12 +52,12 @@
                         </Picker.Items>
                     </Picker>
                 </Frame>
-                <Label Text="Address" FontSize="Large"/>
+                <Label Text="Address" FontSize="Large" TextColor="Black"/>
                 <Frame CornerRadius="20" BorderColor="LightGray" HasShadow="True" Padding="10,0"  Margin="0,10">
                     <Entry x:Name="addressEntry" Text="{Binding PhoneNumber}" Placeholder="Address" FontSize="Large"/>
                 </Frame>
-                
-                <Label Text="Phone Number" FontSize="Large"/>
+
+                <Label Text="Phone Number" FontSize="Large" TextColor="Black"/>
                 <Frame CornerRadius="20" BorderColor="LightGray" HasShadow="True" Padding="10,0"  Margin="0,10">
                     <Entry x:Name="phoneNumberEntry" Text="{Binding Address}" Placeholder="Phone Number" FontSize="Large"/>
                 </Frame>
